[tool.poetry]
name = "aoc2024"
version = "0.1.0"
description = ""
authors = ["Sebastian Claici <sebastianclaici@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.3"
pandas = "^2.2.3"
sympy = "^1.13.3"
advent-of-code-data = "^2.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
